# slider

./: .gitignore  README.rst  appendix.html  client.html  features.html  genindex.html  index.html  model.html  objects.inv  pyproject.toml  replays.html  search.html  searchindex.js  setup.py  what-is-a-beatmap.html  working-with-beatmaps.html
.github/workflows/: main.yml
_modules/: index.html
_modules/slider/: beatmap.html  bit_enum.html  client.html  game_mode.html  library.html  mod.html  position.html  replay.html  utils.html
_modules/slider/model/: adaboost.html  features.html  lstm.html  mlp.html  (+3 more)
_sources/: appendix.rst.txt  features.rst.txt  index.rst.txt  model.rst.txt  replays.rst.txt  working-with-beatmaps.rst.txt
docs/: Makefile  deploy.py
docs/source/: appendix.rst  client.rst  conf.py  features.rst  index.rst  replays.rst  what-is-a-beatmap.rst  working-with-beatmaps.rst
etc/: 411894 Remo Prototype[CV_ Hanamori Yumiri] - Sendan Life.osz
slider/: __init__.py  __main__.py  abc.py  beatmap.py  bit_enum.py  cli.py  client.py  collection.py  curve.py  element_wise.py  game_mode.py  library.py  mod.py  numpy.py  position.py  replay.py  strategies.py  utils.py
slider/model/: __init__.py  features.py  model.py  train.py
slider/tests/: test_beatmap.py  test_collection.py  test_properties.py
spearmint/: README.rst
spearmint/mlp-regressor-all-solvers/: config.json  run_task.py  server.py
tests/: test_beatmap.py  test_utils.py
tests/data/: collection.db
umami/: README.rst
umami/mlp-regressor-all-solvers/: config.json  run_task.py  server.py
(+27 files in other folders)
